updated package listing

--- a/views/pages/fleet/flights.ejs
+++ b/views/pages/fleet/flights.ejs
@@ -11,7 +11,7 @@
 				<table class="table m-0">
 					<thead>
 						<tr>
-							<th>Tail Number</th>
+							<th>Name</th>
 							<th>Contact </th>
 							<th>Phone </th>
 							<th>Air Craft Type</th>
@@ -60,7 +60,7 @@
             <div class="modal-body">
                
              <div class='form-group'>
-                 <label>Tail Number</label>
+                 <label>Name</label>
                  <input class='form-control' type='text' placeholder="Tail Number" id='tail-number'>
                  <input type='hidden' value='0' id='id'/>
 
