updated the edit / del of packages

--- a/views/pages/warehouse/fll-add-package.ejs
+++ b/views/pages/warehouse/fll-add-package.ejs
@@ -309,7 +309,7 @@
                 <button type='button' class="btn btn-small btn-info ">Copy Last Package</button>
                     <div class='form-group'>
                         <label>Tracking #</label>
-                    
+                         <input type='hidden' id='pkgId' value="0" />
                      
                         <input type='text' class='form-control trackingNo' id='trackingNo' name='trackingNo' required />
                     </div>
