--- a/views/shared/__navigation.ejs
+++ b/views/shared/__navigation.ejs
@@ -2,7 +2,7 @@
 <nav class="side-nav">
     <!-- BEGIN: side-nav-content -->
     <ul class="nav nav-primary" id="unifyMenu">
-        <%if (RoleId =="Admin"){%>
+        <%if (RoleId.indexOf("Admin")>-1){%>
         <li class="active selected">
             <a href="#" class="has-arrow" aria-expanded="false">
                 <span class="has-icon">
