--- a/views/pages/warehouse/manifest-packages.ejs
+++ b/views/pages/warehouse/manifest-packages.ejs
@@ -75,7 +75,7 @@
                                             </div>
                                         </div>
                                     </div> -->
-
+                                    <input type='hidden' id="pgmode" value='flight' />
                                     
                                     <div class="card-stats card-round col-xl-4 col-lg-6 col-md-6 col-sm-6">
                                           <div class='form-group'>
