--- a/views/pages/warehouse/nas-no-docs.ejs
+++ b/views/pages/warehouse/nas-no-docs.ejs
@@ -60,7 +60,45 @@
         </div>
     </div>
 </div>
-
+<div class="modal fade" id="awb-details" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2"
+    aria-hidden="true" style="display: none;">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title" id="exampleModalLabel2">AWB Details <span class='ad-id'>ID</span></h2>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class='ad-consignee'></div>
+                <div class='ad-sed'></div>
+                <div class='ad-invoice'></div>
+                
+                <div class='ad-value'></div>
+                <div class='ad-shipper'></div>
+                <div class='ad-carrier'></div>
+                <div>
+                    <h4>Packages</h4>
+                    <table class='table' id='packageListing' style='width:100%' >
+                        <tr>
+                            <th>Tracking </th>
+                            <th>Description</th>
+                            <th>Dimensions</th>
+                            <th>Weight</th>
+                        </tr>
+                    </table>
+                </div>
+               
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary close-del" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-success " id='print-lbl'>Print Label</button>
+                <button type="button" class="btn btn-success " id='print-awb'>Print AWB</button>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="modal fade" id="confirmPkgDel" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2"
     aria-hidden="true" style="display: none;">
     <div class="modal-dialog" role="document">
