--- a/views/pages/warehouse/no-docs.ejs
+++ b/views/pages/warehouse/no-docs.ejs
@@ -19,7 +19,7 @@
 
                 </ul>
                 <div class='row'>
-                    <div class='col-md-12'><button class='btn btn-info pull-right'>Create Cube </button></div>
+                    <!-- <div class='col-md-12'><button class='btn btn-info pull-right'>Create Cube </button></div> -->
                         
                 </div>
                 
