--- a/views/pages/warehouse/fll-add-package.ejs
+++ b/views/pages/warehouse/fll-add-package.ejs
@@ -338,6 +338,21 @@
                         <label>Weight</label>
                         <input type='text' class='form-control weight ' id='weight' name='weight' />
                     </div>
+                    <div class='form-group'>
+                        <label>Package Type</label>
+                       <select class='form-control' id='packaging'>
+                           <option>BOX</option>
+                           <option>BAG</option>
+                       </select>
+                    </div>
+                    <div class='form-group'>
+                        <label>Package No</label>
+                        <div class='row'>
+                            <div class='col-md-4'>
+                        <input type='text' class='form-control weight ' id='pkgNo' name='pkgNo' />
+                                </div>
+                                </div>
+                    </div>
                   
                     <div class='form-group'>
                         <label>Dimensions</label>
