--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -172,13 +172,8 @@
 										</a>
 									</li>
 							<li>
-								<a href="/warehouse/update-invoice">
-									<span class="sub-item">Update AWB Invoice</span>
-								</a>
-							</li>
-							<li>
-								<a href="/warehouse/rec-package-nas">
-									<span class="sub-item">Recieve Packages</span>
+								<a href="/warehouse/incoming-flights">
+									<span class="sub-item">Incoming Flights</span>
 								</a>
 							</li>
 							<li>
